// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TalkBubble snapshot isEncrypted == false 1`] = `
<TalkBubble
  createdAt={2017-08-27T15:00:00.000Z}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  isEncrypted={false}
  mediaFiles={
    Array [
      Object {
        "id_by_host": Object {},
        "meta": undefined,
        "preview_url": "https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg",
        "preview_url_by_host": Object {},
        "text_url": "",
        "type": "",
        "url": "https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg",
        "url_by_host": Object {},
      },
    ]
  }
  onClickHashTag={[Function]}
  onClickMedia={[Function]}
  parsedContent={
    Array [
      Object {
        "tag": "naumanni",
        "type": "hashtag",
        "url": "https://friends.nico/tags/naumanni",
      },
    ]
  }
>
  <li>
    <div
      className="status-content "
    >
      <SafeContent
        onClickHashTag={[Function]}
        parsedContent={
          Array [
            Object {
              "tag": "naumanni",
              "type": "hashtag",
              "url": "https://friends.nico/tags/naumanni",
            },
          ]
        }
      >
        <p>
          <a
            onClick={[Function]}
          >
            #
            naumanni
          </a>
        </p>
      </SafeContent>
      <div
        className="status-mediaList status-mediaList1"
      >
        <a
          className="status-media"
          href="https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg"
          onClick={[Function]}
          style={
            Object {
              "backgroundImage": "url(https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg)",
            }
          }
          target="_blank"
        />
      </div>
    </div>
    <div
      className="status-date"
    >
      <FormattedDate
        day="2-digit"
        hour="2-digit"
        minute="2-digit"
        month="2-digit"
        second="2-digit"
        value={2017-08-27T15:00:00.000Z}
        year="numeric"
      >
        <span>
          08/28/2017, 12:00:00 AM
        </span>
      </FormattedDate>
    </div>
  </li>
</TalkBubble>
`;

exports[`TalkBubble snapshot isEncrypted == true 1`] = `
<TalkBubble
  createdAt={2017-08-27T15:00:00.000Z}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
    }
  }
  isEncrypted={true}
  mediaFiles={
    Array [
      Object {
        "id_by_host": Object {},
        "meta": undefined,
        "preview_url": "https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg",
        "preview_url_by_host": Object {},
        "text_url": "",
        "type": "",
        "url": "https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg",
        "url_by_host": Object {},
      },
    ]
  }
  onClickHashTag={[Function]}
  onClickMedia={[Function]}
  parsedContent={
    Array [
      Object {
        "tag": "naumanni",
        "type": "hashtag",
        "url": "https://friends.nico/tags/naumanni",
      },
    ]
  }
>
  <li>
    <div
      className="status-content is-encrypted"
    >
      <SafeContent
        onClickHashTag={[Function]}
        parsedContent={
          Array [
            Object {
              "tag": "naumanni",
              "type": "hashtag",
              "url": "https://friends.nico/tags/naumanni",
            },
          ]
        }
      >
        <p>
          <a
            onClick={[Function]}
          >
            #
            naumanni
          </a>
        </p>
      </SafeContent>
      <div
        className="status-mediaList status-mediaList1"
      >
        <a
          className="status-media"
          href="https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg"
          onClick={[Function]}
          style={
            Object {
              "backgroundImage": "url(https://d2zoeobnny43zx.cloudfront.net/media_attachments/files/000/904/383/small/d8ffd22736103a82.jpg)",
            }
          }
          target="_blank"
        />
      </div>
    </div>
    <div
      className="status-date"
    >
      <FormattedDate
        day="2-digit"
        hour="2-digit"
        minute="2-digit"
        month="2-digit"
        second="2-digit"
        value={2017-08-27T15:00:00.000Z}
        year="numeric"
      >
        <span>
          08/28/2017, 12:00:00 AM
        </span>
      </FormattedDate>
    </div>
    <div
      className="status-isEncrypted"
    >
      <IconFont
        iconName="lock"
      >
        <span
          className="icon icon-lock"
        />
      </IconFont>
    </div>
  </li>
</TalkBubble>
`;
